RESOLVED FIXED258770
Scrollbar gutters don't update when scrollbar-width value does
https://bugs.webkit.org/show_bug.cgi?id=258770
Summary Scrollbar gutters don't update when scrollbar-width value does
Luke Warlow
Reported 2023-07-01 08:02:48 PDT
Currently scrollbar-gutters don't rerender when scrollbar-width updates. This will fix that. Rerendering of scrollbars when scrollbar-width updates will be handled separately.
Attachments
Luke Warlow
Comment 1 2023-07-01 08:07:18 PDT
EWS
Comment 2 2023-07-03 11:05:43 PDT
Committed 265726@main (8d00d37d4960): <https://commits.webkit.org/265726@main> Reviewed commits have been landed. Closing PR #15480 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-07-03 11:06:33 PDT
Note You need to log in before you can comment on or make changes to this bug.