Scrollbar gutters don't update when scrollbar-width value does https://bugs.webkit.org/show_bug.cgi?id=258770

Reviewed by Tim Nguyen.

Correctly diff scrollbar-width inside of RenderStyle::rareDataChangeRequiresLayout.

Scrollbar gutters now correctly repaint.

Add a WPT test that tests this.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-dynamic-003-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-dynamic-003-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-dynamic-003.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::rareDataChangeRequiresLayout):

Canonical link: https://commits.webkit.org/265726@main